# aiagent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  schedules.yaml
src/agenticai/: __init__.py  __main__.py  cli.py
src/agenticai/audio/: __init__.py  converter.py  whisper_stt.py
src/agenticai/core/: __init__.py  audio_bridge.py  call_manager.py  config.py  conversation_brain.py
src/agenticai/gateway/: __init__.py  client.py  messages.py
src/agenticai/gemini/: __init__.py  handler.py  realtime_handler.py
src/agenticai/openai/: __init__.py  realtime_handler.py
src/agenticai/scheduler/: __init__.py  scheduler.py
src/agenticai/server/: __init__.py  app.py
src/agenticai/telegram/: __init__.py  direct_client.py
src/agenticai/twilio/: __init__.py  client.py  websocket.py
tests/: test_audio_converter.py  test_gateway_messages.py
